# speak-score

./: .cursorrules  .dockerignore  .env.example  .gcloudignore  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  ONBOARDING.md  README.md  package-lock.json  package.json  turbo.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  deploy.yml
backend/: .dockerignore  .gcloudignore  Dockerfile  pyproject.toml
backend/src/: main.py
backend/src/api/: interviews.py  tasks.py
backend/src/core/: auth.py  config.py  errors.py  logging.py  media.py  storage.py  tasks.py
backend/src/repositories/: job_repo.py
backend/src/schemas/: interview.py
backend/src/services/: _openai.py  applicant_id.py  audio_analysis.py  diarization.py  llm_evaluation.py  pipeline.py  qa_formatting.py  scoring.py  transcription.py
backend/tests/: conftest.py  test_auth.py  test_interviews.py  test_job_repo_contract.py  test_logging.py  test_pipeline.py  test_services.py  test_tasks_oidc.py  test_tasks_worker.py
docs/: cicd-setup.md  presentation_material.md  topaz_article_draft.md
docs/adr/: 001_architecture.md  002_store_firestore.md  003_scoring_split.md  004_verbatim_transcription_and_disfluency.md  005_evaluation_layer_ownership.md
docs/ai_log/: 2026-06-21_cd-automation-cloud-run.md  2026-06-21_prod_vs_local_whisper_prompt_mismatch.md  2026-06-21_speaker_diarization_eval.md  2026-06-21_step2-backend-deploy-firebase.md  README.md
frontend/: .env.example  Dockerfile  nginx.conf  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.css  (+3 more)
infra/: README.md
(+74 files in other folders)
