[project]
name = "speakscore-backend"
version = "0.1.0"
description = "SpeakScore backend — 面接動画のAIフィードバックAPI"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "httpx>=0.27",
    "google-cloud-firestore>=2.18",
    "google-cloud-storage>=2.18",
    "google-cloud-tasks>=2.16",
    "firebase-admin>=6.5",
    # 観測性。軽量(pure-python)なので base 依存に置き API/health も含めて初期化する。
    # FastAPI/Starlette 連携は 2.x で自動有効。DSN 未設定なら init をスキップ（no-op）。
    "sentry-sdk>=2.0",
]

[project.optional-dependencies]
# 重い音声処理（worker のみ必要）。API/health 検証では入れなくてよい。
audio = [
    "librosa>=0.10",
    "soundfile>=0.12",
    "numpy>=1.26",
    "ffmpeg-python>=0.2",
    "fugashi>=1.3",
    "unidic-lite>=1.0.8",
]
# LLM / Whisper クライアント
llm = [
    "openai>=1.50",
    "anthropic>=0.39",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.7",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# B008: FastAPI は Depends() を引数デフォルトに置くのが標準イディオム
# UP042: 応答契約（凍結）は (str, Enum) 形を採用。StrEnum と直列化は等価なので維持
ignore = ["B008", "UP042"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
